20100129	Reimplementing the (non-specialized) M88K bsr instruction.
		Continuing on the dyntrans core: page allocation. The basics
		(page allocation and LRU deallocation) have been implemented,
		but not really tested in practice yet.
20100130	Reimplementing the M88K ldcr instruction, and a slow version
		of the st instruction (store 32-bit word).
		Updating guest OS documentation (NetBSD/landisk 4.0.1 to
		5.0.1, NetBSD/pmax 5.0 to 5.0.1, NetBSD/arc 5.0 to 5.0.1,
		NetBSD/cobalt 5.0 to 5.0.1).
		Renaming old testmips to oldtestmips, so that the name
		testmips can be used by the new framework.
20100131	Reimplementing a slow version of the st.d M88K instruction.
		"Quiet mode" is now turned off, if dropping into the debugger,
		both by using -V and by triggering unimplemented instructions.
		The m88k_cpu now takes a creation argument called r31, for the
		initial stack pointer value. (Needed to run the rectangle
		drawing demo, which assumes a valid r31 on startup.)
		Reimplementing the M88K bsr.n instruction, including single-
		stepping scenarios.
20100202	Reimplementing generic M88K loads/stores using templates. (In
		the old implementation, these were constructed using build-
		time generated define/include magic to simulate a template-
		style mechanism in C).
		Reimplementing the M88K divu d,s1,imm instruction.
		Reimplementing the M88K lda.* instruction.
20100203	Beginning on reimplementing M88K bb0.n and bb1.n; only the
		non-singlestepping variant done so far.
20100204	bb0.n and bb1.n should now also work when single-stepping.
		Implementing the non-singlestep variant of M88K jmp.n.
		Beginning on the M88K bcnd.n instruction.
20100205	Continuing on bcnd.n. The testm88k rectangle drawing demo
		now runs :) both when running continuously, and when
		single-stepping. (No graphical output yet, of course.)
20100206	Reimplementing the M88K ext and extu instructions.
		Reimplementing the M88K bb0 and bb1 non-delayslot
		instructions, including samepage variants.